--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ h2 {
     margin-top: -164px;
 }
  
-div {
+.story .about {
     width: 400px;
     height: 300px;
     
@@ -563,52 +563,66 @@ header {
 
 
 /* reservation */
-
-form {
-    width: 1500px;
-    height: 1500px;
-}
-div.elem-group {
-    margin: 30px;
-    width: 300px;
-    height: 60px;
-  }
-  
-  div.elem-group.inlined { 
-    display: inline-block;
-    float: right;
-    margin-left: 20px;
-  }
-  
-  label {
-    display: block;
-    font-family: 'Nanum Gothic';
-    padding-bottom: 10px;
-    font-size: 1.25em;
-  }
-  
-  input, select, textarea {
-    border-radius: 2px;
-    border: 2px solid #777;
-    box-sizing: border-box;
-    font-size: 1.25em;
-    font-family: 'Nanum Gothic';
-    width: 100%;
-    padding: 10px;
-  }
-  
-  div.elem-group.inlined input {
-    width: 95%;
-    display: inline-block;
-  }
-  
-  textarea {
-    height: 250px;
-  }
-  
-  hr {
-    border: 1px dotted #ccc;
-  }
+.container {
+    background-color: #fafafa;
+    margin: 200px;
+    box-shadow: 10px 15px 20px rgba(0, 0, 0, .1);
+    display: grid;
+    grid-template-columns: 40% 60%;
+    }
+    .container-time {
+        background-color: rgba(0, 0, 0, .95);
+        padding: 50px;
+        outline: 3px dashed #998100;
+        outline-offset: -30px;
+        text-align: center;
+        }
+        .container-form {
+            padding: 20px 0;
+            margin: 0 auto;
+            color: #000;
+            }
+            form {
+                display: grid;
+                grid-row-gap: 20px;
+                }
+                form p {
+                font-weight: 600;
+                }
+                .form-field {
+                display: flex;
+                justify-content: space-between;
+                }
+                input,select {
+                padding: 10px 15px;
+                }
+                .btn {
+                    background-color: rgba(0, 0, 0, .95);
+                    color: #fff;
+                    padding: 10px 20px;
+                    border: none;
+                    font-size: 18px;
+                    border-radius: 100px;
+                    -webkit-border-radius: 100px;
+                    -moz-border-radius: 100px;
+                    -ms-border-radius: 100px;
+                    -o-border-radius: 100px;
+                    box-shadow: 7px 10px 12px rgba(0, 0, 0, .1);
+                    cursor: pointer;
+                    transition: all .3s;
+                    -webkit-transition: all .3s;
+                    -moz-transition: all .3s;
+                    -ms-transition: all .3s;
+                    -o-transition: all .3s;
+                    }
+                    .btn:hover {
+                    transform: scale(1.03);
+                    -webkit-transform: scale(1.03);
+                    -moz-transform: scale(1.03);
+                    -ms-transform: scale(1.03);
+                    -o-transform: scale(1.03);
+                    box-shadow: 10px 12px 15px rgba(0, 0, 0, .3);
+                    }   
   
   button {
     height: 50px;
@@ -623,7 +637,6 @@ div.elem-group {
   
   button:hover {
     border: 2px solid black;
-
   }
 .container {
     padding: 80px 120px;
@@ -645,7 +658,9 @@ div.elem-group {
   #myCarousel {
     width: 1200px;
     height: 500px;
-    margin-top: 425px;
+    margin-left: 150px;
+    margin-top: 130px;
+    
   
   }
   .kall {
@@ -653,9 +668,11 @@ div.elem-group {
     margin-top: 0px;
     height: 500px;
   }
-  header {
-    height: 500px;
-  }
+ 
   carousel-inner {
     height: 500px;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
   }
+ 
