--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ h2 {
     border-top-left-radius: 50%;
       
 }
-.first-pic {
+.device {
    
     background-repeat: no-repeat;
     background-size: cover;
@@ -77,7 +77,7 @@ h2 {
     overflow: hidden;
     width: 1500px;
     height: 321px;
-    background-image: url(https://img.freepik.com/free-photo/lifestyle-portrait-elegant-young-woman-with-dark-wavy-hairstyle-trendy-makeup-fashionable-beige-pullover-coat-sitting-cafe-terrace-drinking-coffee-from-white-cup_197531-24448.jpg?size=626&ext=jpg);
+    
    
           
 }
@@ -371,7 +371,7 @@ button:focus {
 header {
     
     border-radius: 57px;
-    height: 169px;
+    height: 600px;
     background-color:whitesmoke;
 }
 .inner-width {
@@ -563,66 +563,53 @@ header {
 
 
 /* reservation */
-.container {
-    background-color: #fafafa;
-    margin: 200px;
-    box-shadow: 10px 15px 20px rgba(0, 0, 0, .1);
-    display: grid;
-    grid-template-columns: 40% 60%;
+form {
+    margin: 350px;
+      width: 1500px;
+      height: 1500px;
+  }
+  div.elem-group {
+      margin: 30px;
+      width: 300px;
+      height: 60px;
     }
-    .container-time {
-        background-color: rgba(0, 0, 0, .95);
-        padding: 50px;
-        outline: 3px dashed #998100;
-        outline-offset: -30px;
-        text-align: center;
-        }
-        .container-form {
-            padding: 20px 0;
-            margin: 0 auto;
-            color: #000;
-            }
-            form {
-                display: grid;
-                grid-row-gap: 20px;
-                }
-                form p {
-                font-weight: 600;
-                }
-                .form-field {
-                display: flex;
-                justify-content: space-between;
-                }
-                input,select {
-                padding: 10px 15px;
-                }
-                .btn {
-                    background-color: rgba(0, 0, 0, .95);
-                    color: #fff;
-                    padding: 10px 20px;
-                    border: none;
-                    font-size: 18px;
-                    border-radius: 100px;
-                    -webkit-border-radius: 100px;
-                    -moz-border-radius: 100px;
-                    -ms-border-radius: 100px;
-                    -o-border-radius: 100px;
-                    box-shadow: 7px 10px 12px rgba(0, 0, 0, .1);
-                    cursor: pointer;
-                    transition: all .3s;
-                    -webkit-transition: all .3s;
-                    -moz-transition: all .3s;
-                    -ms-transition: all .3s;
-                    -o-transition: all .3s;
-                    }
-                    .btn:hover {
-                    transform: scale(1.03);
-                    -webkit-transform: scale(1.03);
-                    -moz-transform: scale(1.03);
-                    -ms-transform: scale(1.03);
-                    -o-transform: scale(1.03);
-                    box-shadow: 10px 12px 15px rgba(0, 0, 0, .3);
-                    }   
+    
+    div.elem-group.inlined { 
+      display: inline-block;
+      float: right;
+      margin-left: 20px;
+    }
+    
+    label {
+      display: block;
+      font-family: 'Nanum Gothic';
+      padding-bottom: 10px;
+      font-size: 1.25em;
+    }
+    
+    input, select, textarea {
+      border-radius: 2px;
+      border: 2px solid #777;
+      box-sizing: border-box;
+      font-size: 1.25em;
+      font-family: 'Nanum Gothic';
+      width: 100%;
+      padding: 10px;
+    }
+    
+    div.elem-group.inlined input {
+      width: 95%;
+      display: inline-block;
+    }
+    
+    textarea {
+      height: 250px;
+    }
+    
+    hr {
+      border: 1px dotted #ccc;
+    }
+    
   
   button {
     height: 50px;
