--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,7 @@ button:focus {
     margin-top: 220px;
 }
 .menu {
+    margin: 53px;
     background-color:#fff;
     width: 1200px;
     height: 1200px;
